# webhook-relay

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: EXTENDING.md
migrations/: 20260220134000_create_events.sql  20260220150000_add_delivery_attempts_and_event_fields.sql  20260220170000_add_events_filter_indexes.sql  20260220183000_add_events_body_size_bytes.sql  20260220183000_improve_events_list_pagination_indexes.sql  20260220190000_add_event_status_enum.sql  20260221000000_add_dead_event_status.sql  20260221090000_add_idempotency_key.sql
src/: api.rs  config.rs  domain.rs  lib.rs  main.rs
src/api/: mod.rs
src/config/: mod.rs
src/db/: memory.rs  mod.rs  pg.rs
src/domain/: mod.rs
src/errors/: mod.rs
tests/: event_status_integration.rs
