[package]
name = "webhook-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tower = "0.5"
